fix: backdrop not covering searchbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -66,11 +66,6 @@ body::-webkit-scrollbar-thumb {
   animation-name: slideIn;
 }
 
-.dots-map--slideInFromBottom {
-  animation-duration: 0.5s;
-  animation-name: slideInFromBottom;
-}
-
 @keyframes scaleIn {
   from {
     opacity: 0;
@@ -80,17 +75,5 @@ body::-webkit-scrollbar-thumb {
   to {
     opacity: 1;
     transform: scale(1);
-  }
-}
-
-@keyframes slideInFromBottom {
-  from {
-    opacity: 0;
-    transform: translate(0, 50%);
-  }
-
-  to {
-    opacity: 1;
-    transform: translate(0, 0);
   }
 }
